--- a/apps/routerconsole/jsp/themes/console/light/console.css
+++ b/apps/routerconsole/jsp/themes/console/light/console.css
@@ -8918,7 +8918,7 @@ th.options {
     high-contrast-adjust: none;
 }
 
-@media (prefers-contrast: forced) {
+@media (forced-colors: active) {
     * {
         color: unset;
         background-color: unset;
